--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Second Children's clothing & more</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/secondCCM.png">
+  <link rel="icon" type="image/x-icon" href="/SCCM.svg">
 </head>
 <body>
   <app-root></app-root>
